# CloudStaffHub

./: .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: csh_ci.yml
django_project/: settings.py  urls.py
owner/: filters.py  forms.py  urls.py
owner/templates/owner/: department_list.html
owner/views/: __init__.py  department_create.py  department_list.py
recruitment/: admin.py  choices.py  factories.py  factory.py  forms.py  models.py  urls.py  views.py
recruitment/migrations/: 0001_initial.py  0002_alter_position_description.py  0003_joboffer.py  0004_position_category.py  0005_rename_position_id_joboffer_position.py
recruitment/templates/recruitment/: base.html  job_offer_apply.html  job_offer_detail.html  job_offer_update.html  job_offers.html
recruitment/tests/: test_urls.py
recruitment/views/: candidate_default.py  job_offers_apply.py  job_offers_create.py  job_offers_list.py  job_offers_update.py
src/: .env.dist  manage.py  requirements.txt
src/.ebextensions/: django.config
src/CloudStaffHub/: asgi.py  settings.py  urls.py  wsgi.py
src/candidate/: urls.py
src/candidate/tests/: test_urls.py  test_views.py
src/candidate/views/: __init__.py  candidate_dashboard.py
src/core/: asgi.py  base.py  consts.py  env.py  settings.py  urls.py  wsgi.py
src/core/settings/: common.py  development.py  production.py
src/creator/: urls.py
src/creator/tests/: test_urls.py  test_views.py
src/creator/views/: __init__.py  company_admin_dashboard.py
src/dashboards/: urls.py
src/dashboards/tests/: test_urls_candidate.py  test_urls_employee.py  test_urls_owner.py  test_views_candidate.py  test_views_employee.py  test_views_owner.py
src/dashboards/views/: __init__.py  dashboard_candidate.py  dashboard_employee.py  dashboard_manager.py  dashboard_owner.py  dashboard_recruiter.py
src/django_project/: settings.py
src/employee/: urls.py
src/employee/tests/: __init__.py  test_urls.py  test_views.py
src/evaluation/: admin.py  choices.py  factories.py  filters.py  forms.py  models.py  urls.py
src/events/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py
src/landing/: apps.py  urls.py
src/manager/: urls.py
src/organizations/: admin.py  apps.py  consts.py  factories.py  forms.py  models.py  models1.py  signals.py  urls.py
src/owner/: filters.py  forms.py  urls.py
src/polls/: admin.py  factories.py  filters.py  forms.py  models.py  urls.py
src/recruiter/: apps.py  filters.py  forms.py  urls.py
src/recruitment/: admin.py  choices.py  factories.py  filters.py  forms.py  models.py  urls.py
src/users/: admin.py  apps.py  factories.py  forms.py  models.py  signals.py  urls.py
users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/views/: __init__.py  dashboard.py  login.py  logout.py  register.py
(+372 files in other folders)
