[tool.poetry]
name = "cloudstaffhub"
version = "0.1.0"
description = "HR application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.2"
django-bootstrap-datepicker-plus = "5.0.4"
django-bootstrap4 = "23.2"
django-crispy-forms= "2.0"
django-environ= "0.10.0"
django-extensions= "3.2.3"
django-filter = "23.2"
djangorestframework = "3.14.0"
django-phonenumber-field = "7.2.0"
django-widget-tweaks = "1.4.12"
factory-boy = "3.3.0"
Pillow = "10.1.0"
pre-commit = "3.3.3"
psycopg2 = "2.9.6"
crispy-bootstrap5 = "^2023.10"
phonenumbers = "^8.13.27"
funcy = "^2.0"
guardian = "^0.2.2"
django-guardian = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
